--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,9 +12,9 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.27.1",
-    "@hookform/resolvers": "^3.3.2",
-    "@mantine/hooks": "^7.2.2",
+    "@clerk/nextjs": "^4.29.1",
+    "@hookform/resolvers": "^3.3.3",
+    "@mantine/hooks": "^7.3.2",
     "@pinecone-database/pinecone": "^1.1.2",
     "@prisma/client": "5.6.0",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -26,52 +26,52 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tailwindcss/typography": "^0.5.10",
-    "@tanstack/react-query": "^5.8.4",
-    "@trpc/client": "11.0.0-alpha-next-2023-11-11-17-32-01.100",
-    "@trpc/react-query": "11.0.0-alpha-next-2023-11-11-17-32-01.100",
-    "@trpc/server": "11.0.0-alpha-next-2023-11-11-17-32-01.100",
-    "@unkey/api": "^0.12.0",
-    "@unkey/nextjs": "^0.13.2",
-    "@uploadthing/react": "^6.0.0",
-    "ai": "^2.2.23",
+    "@tanstack/react-query": "^5.17.0",
+    "@trpc/client": "11.0.0-next-alpha.149",
+    "@trpc/react-query": "11.0.0-next-alpha.149",
+    "@trpc/server": "11.0.0-next-alpha.149",
+    "@unkey/api": "^0.12.1",
+    "@unkey/nextjs": "^0.13.5",
+    "@uploadthing/react": "^6.0.2",
+    "ai": "^2.2.30",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.0",
     "cookie": "^0.6.0",
     "date-fns": "^2.30.0",
     "langchain": "^0.0.189",
     "lucide-react": "^0.292.0",
     "next": "14.0.2",
     "next-themes": "^0.2.1",
-    "openai": "^4.19.0",
+    "openai": "^4.24.1",
     "pdf-parse": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
-    "react-hook-form": "^7.48.2",
+    "react-hook-form": "^7.49.2",
     "react-markdown": "^9.0.1",
-    "react-pdf": "^7.5.1",
-    "react-resize-detector": "^9.1.0",
+    "react-pdf": "^7.6.0",
+    "react-resize-detector": "^9.1.1",
     "react-textarea-autosize": "^8.5.3",
     "server-only": "^0.0.1",
     "simplebar-react": "^3.2.4",
-    "stripe": "^14.4.0",
-    "tailwind-merge": "^2.0.0",
+    "stripe": "^14.10.0",
+    "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^6.0.1",
+    "uploadthing": "^6.1.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.9.0",
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
+    "@types/node": "^20.10.6",
+    "@types/react": "^18.2.46",
+    "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.53.0",
+    "eslint": "^8.56.0",
     "eslint-config-next": "14.0.2",
-    "postcss": "^8.4.31",
-    "prettier": "^3.1.0",
-    "prettier-plugin-tailwindcss": "^0.5.7",
+    "postcss": "^8.4.32",
+    "prettier": "^3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.10",
     "prisma": "5.6.0",
-    "tailwindcss": "^3.3.5",
-    "typescript": "^5.2.2"
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.3.3"
   }
 }
